simulators/internal/openapi/v1/README.md
# Go API client for openapi

API for Routing Information Base.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project.  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.0.0
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.GoClientCodegen

## Installation

Install the following dependencies:

```sh
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```go
import openapi "github.com/GIT_USER_ID/GIT_REPO_ID"
```

To use a proxy, set the environment variable `HTTP_PROXY`:

```go
os.Setenv("HTTP_PROXY", "http://proxy_name:proxy_port")
```

## Configuration of Server URL

Default configuration comes with `Servers` field that contains server objects as defined in the OpenAPI specification.

### Select Server Configuration

For using other server than the one defined on index 0 set context value `openapi.ContextServerIndex` of type `int`.

```go
ctx := context.WithValue(context.Background(), openapi.ContextServerIndex, 1)
```

### Templated Server URL

Templated server URL is formatted using default variables from configuration or from context value `openapi.ContextServerVariables` of type `map[string]string`.

```go
ctx := context.WithValue(context.Background(), openapi.ContextServerVariables, map[string]string{
	"basePath": "v2",
})
```

Note, enum values are always validated and all unused variables are silently ignored.

### URLs Configuration per Operation

Each operation can use different server URL defined using `OperationServers` map in the `Configuration`.
An operation is uniquely identified by `"{classname}Service.{nickname}"` string.
Similar rules for overriding default operation server index and variables applies by using `openapi.ContextOperationServerIndices` and `openapi.ContextOperationServerVariables` context maps.

```go
ctx := context.WithValue(context.Background(), openapi.ContextOperationServerIndices, map[string]int{
	"{classname}Service.{nickname}": 2,
})
ctx = context.WithValue(context.Background(), openapi.ContextOperationServerVariables, map[string]map[string]string{
	"{classname}Service.{nickname}": {
		"port": "8443",
	},
})
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BulkDeleteRoutesAPI* | [**BulkDeleteRoutes**](docs/BulkDeleteRoutesAPI.md#bulkdeleteroutes) | **Delete** /v1/network-instances/{network-instance-name}/routes | 
*ClientsAPI* | [**DeregisterClient**](docs/ClientsAPI.md#deregisterclient) | **Delete** /v1/clients/{client-name} | 
*ClientsAPI* | [**RegisterClient**](docs/ClientsAPI.md#registerclient) | **Post** /v1/clients | 
*ClientsAPI* | [**UpdateClient**](docs/ClientsAPI.md#updateclient) | **Patch** /v1/clients | 
*HeartbeatAPI* | [**Heartbeat**](docs/HeartbeatAPI.md#heartbeat) | **Post** /v1/heartbeats | 
*NexthopAPI* | [**DeregisterNexthop**](docs/NexthopAPI.md#deregisternexthop) | **Delete** /v1/network-instances/{network-instance-name}/nexthops | 
*NexthopAPI* | [**RegisterNexthop**](docs/NexthopAPI.md#registernexthop) | **Post** /v1/network-instances/{network-instance-name}/nexthops | 
*NexthopRegistrationEofAPI* | [**ReceiveNexthopRegistrationEof**](docs/NexthopRegistrationEofAPI.md#receivenexthopregistrationeof) | **Post** /v1/network-instances/{network-instance-name}/clients/{client-name}/nexthop-reg-eof | 
*PrefixAPI* | [**DeregisterPrefix**](docs/PrefixAPI.md#deregisterprefix) | **Delete** /v1/network-instances/{network-instance-name}/prefixes | 
*PrefixAPI* | [**RegisterPrefix**](docs/PrefixAPI.md#registerprefix) | **Post** /v1/network-instances/{network-instance-name}/prefixes | 
*PrefixRegistrationEofAPI* | [**ReceivePrefixRegistrationEof**](docs/PrefixRegistrationEofAPI.md#receiveprefixregistrationeof) | **Post** /v1/network-instances/{network-instance-name}/clients/{client-name}/prefix-reg-eof | 
*RedistributionAPI* | [**AddRouteRedistribution**](docs/RedistributionAPI.md#addrouteredistribution) | **Post** /v1/network-instances/{network-instance-name}/redistribution | 
*RedistributionAPI* | [**DeleteRouteRedistribution**](docs/RedistributionAPI.md#deleterouteredistribution) | **Delete** /v1/network-instances/{network-instance-name}/redistribution | 
*RedistributionAPI* | [**UpdateRouteRedistribution**](docs/RedistributionAPI.md#updaterouteredistribution) | **Patch** /v1/network-instances/{network-instance-name}/redistribution | 
*RouteEofAPI* | [**ReceiveRouteEof**](docs/RouteEofAPI.md#receiverouteeof) | **Post** /v1/network-instances/{network-instance-name}/clients/{client-name}/route-eof | 
*RoutesAPI* | [**RouteOperation**](docs/RoutesAPI.md#routeoperation) | **Post** /v1/network-instances/{network-instance-name}/routes | 


## Documentation For Models

 - [AddRouteItem](docs/AddRouteItem.md)
 - [BulkDeleteRoutes](docs/BulkDeleteRoutes.md)
 - [Client](docs/Client.md)
 - [ClientIdentifier](docs/ClientIdentifier.md)
 - [ClientUpdate](docs/ClientUpdate.md)
 - [ConsumerInfo](docs/ConsumerInfo.md)
 - [ConsumerUpdateInfo](docs/ConsumerUpdateInfo.md)
 - [DeleteRouteItem](docs/DeleteRouteItem.md)
 - [Heartbeat](docs/Heartbeat.md)
 - [IfType](docs/IfType.md)
 - [InterfaceInfo](docs/InterfaceInfo.md)
 - [InvalidParam](docs/InvalidParam.md)
 - [IpAddress](docs/IpAddress.md)
 - [IpOrPrefix](docs/IpOrPrefix.md)
 - [IpPrefix](docs/IpPrefix.md)
 - [Ipv4Address](docs/Ipv4Address.md)
 - [Ipv4Prefix](docs/Ipv4Prefix.md)
 - [Ipv6Address](docs/Ipv6Address.md)
 - [Ipv6Prefix](docs/Ipv6Prefix.md)
 - [NexthopInformation](docs/NexthopInformation.md)
 - [NexthopLabels](docs/NexthopLabels.md)
 - [NexthopNotification](docs/NexthopNotification.md)
 - [NexthopNotificationItem](docs/NexthopNotificationItem.md)
 - [NexthopRegister](docs/NexthopRegister.md)
 - [NexthopRegisterItem](docs/NexthopRegisterItem.md)
 - [NexthopRegisterResult](docs/NexthopRegisterResult.md)
 - [NexthopRegisterResultItem](docs/NexthopRegisterResultItem.md)
 - [NexthopResponseEOF](docs/NexthopResponseEOF.md)
 - [NotifyInformation](docs/NotifyInformation.md)
 - [NotifyInformationMsg](docs/NotifyInformationMsg.md)
 - [PerfixResponseEOF](docs/PerfixResponseEOF.md)
 - [PrefixNotification](docs/PrefixNotification.md)
 - [PrefixNotificationItem](docs/PrefixNotificationItem.md)
 - [PrefixNotificationNexthop](docs/PrefixNotificationNexthop.md)
 - [PrefixRegister](docs/PrefixRegister.md)
 - [PrefixRegisterItem](docs/PrefixRegisterItem.md)
 - [PrefixRegisterResult](docs/PrefixRegisterResult.md)
 - [PrefixRegisterResultItem](docs/PrefixRegisterResultItem.md)
 - [ProblemDetails](docs/ProblemDetails.md)
 - [ProducerInfo](docs/ProducerInfo.md)
 - [PublishedNexthop](docs/PublishedNexthop.md)
 - [PublishedNexthopEntryInner](docs/PublishedNexthopEntryInner.md)
 - [PublishedNexthopEntryInnerViaNexthopId](docs/PublishedNexthopEntryInnerViaNexthopId.md)
 - [PublishedNexthopEntryInnerViaNh](docs/PublishedNexthopEntryInnerViaNh.md)
 - [PublishedNexthops](docs/PublishedNexthops.md)
 - [PublishedRoute](docs/PublishedRoute.md)
 - [PublishedRouteNh](docs/PublishedRouteNh.md)
 - [PublishedRoutes](docs/PublishedRoutes.md)
 - [Redistribution](docs/Redistribution.md)
 - [RedistributionEOF](docs/RedistributionEOF.md)
 - [RedistributionNotification](docs/RedistributionNotification.md)
 - [RedistributionNotificationHeader](docs/RedistributionNotificationHeader.md)
 - [RedistributionNotificationRoute](docs/RedistributionNotificationRoute.md)
 - [RedistributionRouteNexthop](docs/RedistributionRouteNexthop.md)
 - [RouteArrayItem](docs/RouteArrayItem.md)
 - [RouteEOFToConsumer](docs/RouteEOFToConsumer.md)
 - [RouteEoFFromProducer](docs/RouteEoFFromProducer.md)
 - [RouteLspType](docs/RouteLspType.md)
 - [RouteOperationResultItem](docs/RouteOperationResultItem.md)
 - [RouteType](docs/RouteType.md)
 - [Routes](docs/Routes.md)
 - [RoutesOperationResult](docs/RoutesOperationResult.md)


## Documentation For Authorization

Endpoints do not require authorization.


## Documentation for Utility Methods

Due to the fact that model structure members are all pointers, this package contains
a number of utility functions to easily obtain pointers to values of basic types.
Each of these functions takes a value of the given basic type and returns a pointer to it:

* `PtrBool`
* `PtrInt`
* `PtrInt32`
* `PtrInt64`
* `PtrFloat`
* `PtrFloat32`
* `PtrFloat64`
* `PtrString`
* `PtrTime`

## Author

PDLDPDEVEL@pdl.internal.ericsson.com

