simulators/internal/openapi/v2/README.md
# Go API client for openapi

API for Routing Information Base.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project.  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 2.0.0
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.GoClientCodegen

## Installation

Install the following dependencies:

```sh
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```go
import openapi "github.com/GIT_USER_ID/GIT_REPO_ID"
```

To use a proxy, set the environment variable `HTTP_PROXY`:

```go
os.Setenv("HTTP_PROXY", "http://proxy_name:proxy_port")
```

## Configuration of Server URL

Default configuration comes with `Servers` field that contains server objects as defined in the OpenAPI specification.

### Select Server Configuration

For using other server than the one defined on index 0 set context value `openapi.ContextServerIndex` of type `int`.

```go
ctx := context.WithValue(context.Background(), openapi.ContextServerIndex, 1)
```

### Templated Server URL

Templated server URL is formatted using default variables from configuration or from context value `openapi.ContextServerVariables` of type `map[string]string`.

```go
ctx := context.WithValue(context.Background(), openapi.ContextServerVariables, map[string]string{
	"basePath": "v2",
})
```

Note, enum values are always validated and all unused variables are silently ignored.

### URLs Configuration per Operation

Each operation can use different server URL defined using `OperationServers` map in the `Configuration`.
An operation is uniquely identified by `"{classname}Service.{nickname}"` string.
Similar rules for overriding default operation server index and variables applies by using `openapi.ContextOperationServerIndices` and `openapi.ContextOperationServerVariables` context maps.

```go
ctx := context.WithValue(context.Background(), openapi.ContextOperationServerIndices, map[string]int{
	"{classname}Service.{nickname}": 2,
})
ctx = context.WithValue(context.Background(), openapi.ContextOperationServerVariables, map[string]map[string]string{
	"{classname}Service.{nickname}": {
		"port": "8443",
	},
})
```

## Documentation for API Endpoints

All URIs are relative to *https://eric-pc-routing-information-base:443/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ClientsAPI* | [**DeregisterConsumer**](docs/ClientsAPI.md#deregisterconsumer) | **Delete** /consumers/{id} | 
*ClientsAPI* | [**DeregisterProducer**](docs/ClientsAPI.md#deregisterproducer) | **Delete** /producers/{id} | 
*ClientsAPI* | [**RegisterConsumer**](docs/ClientsAPI.md#registerconsumer) | **Post** /consumers | 
*ClientsAPI* | [**RegisterProducer**](docs/ClientsAPI.md#registerproducer) | **Post** /producers | 
*ClientsAPI* | [**UpdateConsumer**](docs/ClientsAPI.md#updateconsumer) | **Patch** /consumers/{id} | 
*HeartbeatsAPI* | [**ConsumerHeartbeat**](docs/HeartbeatsAPI.md#consumerheartbeat) | **Post** /consumers/{id}/heartbeats | 
*HeartbeatsAPI* | [**ProducerHeartbeat**](docs/HeartbeatsAPI.md#producerheartbeat) | **Post** /producers/{id}/heartbeats | 
*NexthopsAPI* | [**DeregisterNexthop**](docs/NexthopsAPI.md#deregisternexthop) | **Delete** /network-instances/{networkInstanceName}/producers/{producerId}/nexthops | 
*NexthopsAPI* | [**ReceiveNexthopRegistrationEOF**](docs/NexthopsAPI.md#receivenexthopregistrationeof) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/nexthop-reg-eof | 
*NexthopsAPI* | [**RegisterNexthop**](docs/NexthopsAPI.md#registernexthop) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/nexthops | 
*PrefixesAPI* | [**DeregisterPrefix**](docs/PrefixesAPI.md#deregisterprefix) | **Delete** /network-instances/{networkInstanceName}/producers/{producerId}/prefixes | 
*PrefixesAPI* | [**ReceivePrefixRegistrationEOF**](docs/PrefixesAPI.md#receiveprefixregistrationeof) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/prefix-reg-eof | 
*PrefixesAPI* | [**RegisterPrefix**](docs/PrefixesAPI.md#registerprefix) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/prefixes | 
*RoutesAPI* | [**BulkDeleteRoutes**](docs/RoutesAPI.md#bulkdeleteroutes) | **Delete** /network-instances/{networkInstanceName}/producers/{producerId}/routes | 
*RoutesAPI* | [**ReceiveRouteEOF**](docs/RoutesAPI.md#receiverouteeof) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/route-eof | 
*RoutesAPI* | [**RouteOperation**](docs/RoutesAPI.md#routeoperation) | **Post** /network-instances/{networkInstanceName}/producers/{producerId}/routes | 


## Documentation For Models

 - [AddRouteItem](docs/AddRouteItem.md)
 - [AddRouteItemProtocolInner](docs/AddRouteItemProtocolInner.md)
 - [AddressFamily](docs/AddressFamily.md)
 - [Consumer](docs/Consumer.md)
 - [ConsumerNexthopsNotification](docs/ConsumerNexthopsNotification.md)
 - [ConsumerNexthopsNotificationItem](docs/ConsumerNexthopsNotificationItem.md)
 - [ConsumerNexthopsNotificationItemEntryInner](docs/ConsumerNexthopsNotificationItemEntryInner.md)
 - [ConsumerNexthopsNotificationItemEntryInnerViaNexthop](docs/ConsumerNexthopsNotificationItemEntryInnerViaNexthop.md)
 - [ConsumerNexthopsNotificationItemType](docs/ConsumerNexthopsNotificationItemType.md)
 - [ConsumerNotification](docs/ConsumerNotification.md)
 - [ConsumerNotificationMsg](docs/ConsumerNotificationMsg.md)
 - [ConsumerRoutesEOFNotification](docs/ConsumerRoutesEOFNotification.md)
 - [ConsumerRoutesNotification](docs/ConsumerRoutesNotification.md)
 - [ConsumerRoutesNotificationItem](docs/ConsumerRoutesNotificationItem.md)
 - [ConsumerRoutesNotificationItemAction](docs/ConsumerRoutesNotificationItemAction.md)
 - [ConsumerRoutesNotificationItemNexthop](docs/ConsumerRoutesNotificationItemNexthop.md)
 - [ConsumerUpdate](docs/ConsumerUpdate.md)
 - [DeleteRouteItem](docs/DeleteRouteItem.md)
 - [InterfaceInfo](docs/InterfaceInfo.md)
 - [InterfaceType](docs/InterfaceType.md)
 - [InvalidParam](docs/InvalidParam.md)
 - [IpNexthop](docs/IpNexthop.md)
 - [NexthopAddressInfo](docs/NexthopAddressInfo.md)
 - [NexthopIPInfo](docs/NexthopIPInfo.md)
 - [NexthopLabels](docs/NexthopLabels.md)
 - [NexthopRegister](docs/NexthopRegister.md)
 - [NexthopRegisterItem](docs/NexthopRegisterItem.md)
 - [NexthopRegisterResult](docs/NexthopRegisterResult.md)
 - [NexthopRegisterResultItem](docs/NexthopRegisterResultItem.md)
 - [NexthopServiceInfo](docs/NexthopServiceInfo.md)
 - [PrefixNexthopType](docs/PrefixNexthopType.md)
 - [PrefixRegister](docs/PrefixRegister.md)
 - [PrefixRegisterItem](docs/PrefixRegisterItem.md)
 - [PrefixRegisterItemLookupType](docs/PrefixRegisterItemLookupType.md)
 - [PrefixRegisterResult](docs/PrefixRegisterResult.md)
 - [PrefixRegisterResultItem](docs/PrefixRegisterResultItem.md)
 - [ProblemDetails](docs/ProblemDetails.md)
 - [Producer](docs/Producer.md)
 - [ProducerNotification](docs/ProducerNotification.md)
 - [ProducerNotificationMsg](docs/ProducerNotificationMsg.md)
 - [QueryNexthopNotification](docs/QueryNexthopNotification.md)
 - [QueryNexthopNotificationEOF](docs/QueryNexthopNotificationEOF.md)
 - [QueryNexthopNotificationItem](docs/QueryNexthopNotificationItem.md)
 - [QueryNexthopNotificationItemAllOfFlags](docs/QueryNexthopNotificationItemAllOfFlags.md)
 - [QueryPrefixNotification](docs/QueryPrefixNotification.md)
 - [QueryPrefixNotificationEOF](docs/QueryPrefixNotificationEOF.md)
 - [QueryPrefixNotificationItem](docs/QueryPrefixNotificationItem.md)
 - [QueryPrefixNotificationItemIsFound](docs/QueryPrefixNotificationItemIsFound.md)
 - [QueryPrefixNotificationNexthopItem](docs/QueryPrefixNotificationNexthopItem.md)
 - [RouteArrayItem](docs/RouteArrayItem.md)
 - [RouteEoFFromProducer](docs/RouteEoFFromProducer.md)
 - [RouteLspType](docs/RouteLspType.md)
 - [RouteNexthopInfo](docs/RouteNexthopInfo.md)
 - [RouteNexthopInfoAttrInner](docs/RouteNexthopInfoAttrInner.md)
 - [RouteOperationResultItem](docs/RouteOperationResultItem.md)
 - [RouteType](docs/RouteType.md)
 - [Routes](docs/Routes.md)
 - [RoutesOperationResult](docs/RoutesOperationResult.md)
 - [ServiceNexthop](docs/ServiceNexthop.md)


## Documentation For Authorization

Endpoints do not require authorization.


## Documentation for Utility Methods

Due to the fact that model structure members are all pointers, this package contains
a number of utility functions to easily obtain pointers to values of basic types.
Each of these functions takes a value of the given basic type and returns a pointer to it:

* `PtrBool`
* `PtrInt`
* `PtrInt32`
* `PtrInt64`
* `PtrFloat`
* `PtrFloat32`
* `PtrFloat64`
* `PtrString`
* `PtrTime`

## Author

PDLDPDEVEL@pdl.internal.ericsson.com

